First round of AI changes

--- a/atopile/essentials/1-the-ato-language.mdx
+++ b/atopile/essentials/1-the-ato-language.mdx
@@ -1,12 +1,9 @@
 ---
 title: '1. `ato` Language'
-description: "`ato` is a domain specific language (DSL) for describing electronic circuit boards. It's heavily inspired by, and attempts to largely follow the syntax of Python 🐍 for consistency and familiarity."
+description: "`ato` is a domain specific language (DSL) for describing electronic circuit boards. It's heavily inspired by, and attempts to follow the syntax of Python 🐍 for consistency and familiarity."
 icon: 'atom'
 ---
 
-`ato` is a domain specific language (DSL) for describing electronic circuit boards.
-
-It's heavily inspired by, and attempts to largely follow the syntax of Python 🐍 for consistency and familiarity.
 
 ## Basic types
 
@@ -17,7 +14,7 @@ A `signal` is a special built-in type of `interface` that represents a single [e
 A `component` is a subclass of a `module` that expects to represent a single physical component.
 
 You can also define you own types, in a similar way to define a `class` in Python.
-Like classes in most modern languages, we can subclass and inherit from blocks.
+Like classes in most modern languages, you can subclass and inherit from blocks.
 
 ```python
 module SomeModule:
@@ -45,21 +42,21 @@ module Test:
 
 ## Configuring blocks
 
-Configuration of a `module` or `interface` is done by assigning to it's attributes.
+Configuration of a `module` or `interface` is done by assigning to its attributes.
 
 ```ato
 some_instance.value = 100ohm +/- 10%
 ```
 
-Unlike Python, you don't need to state `self.` and instead any assignments you make within the scope of a block, are automatically assigned to the block.
+Unlike Python, you don't need to state `self.` Instead any assignments you make within the scope of a block, are automatically assigned to the block.
 
-There are a number of built-in attributes that influence the behavior of the compiler with respect to the block.
+Built-in attributes influence the behavior of the compiler with respect to the block.
 
-Setting the `package` attribute, for example, will make the compiler select only components with the specified package to be used in that component's slot.
+Setting the `package` attribute, for example, makes the compiler select only components with the specified package to use in that component's slot.
 
 ## Connecting it up
 
-Any `interface` can be connected to any other interface of the same type using the `~` operator.
+Any `interface` can connect to any other interface of the same type using the `~` operator.
 
 ```ato
 some_signal ~ another
@@ -67,41 +64,40 @@ some_signal ~ another
 
 ## Units and tolerances, assertions and maths
 
-Remember how NASA slung a rocket straight into Mars because of a metric/imperial boo boo?
+Remember how NASA slung a rocket straight into Mars because of a metric/imperial error?
 
-How about we don't do that again.
+Let's not do that again.
 
 ### Units
 
-Resistors's resistances must be a resistance; whether `1.23Ω` (option+Z on macOS), `1.23ohm`, `4.56Kohm`, `7.89Mohm` or similar.
+Resistors' resistances must be a resistance; whether `1.23Ω` (option+Z on macOS), `1.23ohm`, `4.56Kohm`, `7.89Mohm` or similar.
 
 Any attribute of any block may have a unit attached written (without a space) after any number.
 
-Unsurprisingly, caps capacitances need to be a capacitance; eg. `23.4uF`, various limits in volts, amperes, degrees and so on.
+Unsurprisingly, caps capacitance needs to be a capacitance; for example, `23.4uF`, other limits in volts, amperes, degrees, and so on.
 
 Add units.
 
 ### Tolerances
 
-Another unfamiliar first-class language feature when dealing with the physical world is the ability (and generally requirement)
+Another unfamiliar first-class language feature when dealing with the physical world is the ability (and generally specification)
 to spec tolerances for attributes.
 
-You could try find a `10kΩ` resistor, but my money says you won't - it'll likely be at least `10kΩ +/- 0.1%` (which you can
-write!)
+You could try find a `10kΩ` resistor, but it probably won't exist - it'll likely be at least `10kΩ +/- 0.1%` (which you can write!).
 
 Tolerances can be written in the forms of:
 - `1V to 2V`
 - `3uF +/- 1uF`
 - `4Kohm +/- 1%`
 
-These are hopefully sufficiently intuitive as to not warrant further explanation 🤞
+These are hopefully sufficiently intuitive to not warrant further explanation 🤞
 
 
 ### Units and Tolerances
 
-With Units and Tolerances together, we can define physical attributes.
+With Units and Tolerances together, physical attributes can be defined.
 
-There's quite a few legal ways to combine them!
+There are several legal ways to combine them.
 
 - `3V to 3.6V` perhaps for a supply rail
 - `3V +/- 10mV` maybe for a reference
@@ -109,15 +105,15 @@ There's quite a few legal ways to combine them!
 - even `25lb +/- 200g` 🤣
 
 
-### Sweet, so now I've got all these values around the place... what can I do with them?
+### Sweet, so now that all these values are around the place what can be done with them?
 
 :sparkles: **Maths** :sparkles:
 
-There are two things that atopile can do for you with these values:
+There are two things that atopile does for you with these values:
 1. Check that assertions about their relationships to one another are true
-2. Solve systems of constraints based on these relationships for find component values
+2. Solve systems of constraints based on these relationships to find component values
 
-This maths is all done including the units and tolerances, so you can be sure absolutely sure everything always works.
+This maths is all done including the units and tolerances, so you can be absolutely sure everything always works.
 
 Use the `assert` keyword to apply constraints on the values of attributes to one another.
 
@@ -129,18 +125,18 @@ b = 2 ± 0.2
 c: resistance  # variable declaration without assignment
 
 assert a < b  # always true before 0.9 and 1.1 (the bounds of a) are both lower than the bounds of b (1.8 and 2.2)
-assert a > b  # always false --> Will yield a failure at compile time
+assert a > b  # always false --> Yields a failure at compile time
 assert c within 1Kohm to 10Kohm  # first solved for, then the solution is independently checked at the end of the build
 ```
 
-I'm not sure about you, but I (Matt) am pretty dumb and don't love working too hard.
-Perhaps you've got a better method, but generally when I'm trying to find resistor values for something even as simple as a voltage divider, I guess one that seems approximately right, then calculate the other - giving me something that doesn't exist, before finally checking through a few other options close-by until finding a pair that works.
+Not sure about you, but this author (Matt) is not fond of working too hard.
+Perhaps you've got a better method, but generally when trying to find resistor values for something even as simple as a voltage divider, one is guessed that seems approximately right, then the other is calculated - giving something that doesn't exist, before finally checking through a few other options close-by until finding a pair that works.
 
-This is fine and dandy as long as you only care about the ratio of a voltage divider, but as soon as you need to check what that does for your regulators output voltage? Ergh, fine! What about the extremes of the tolerances on those resistors? Fine I'll do it once - but I swear if someone goes to tweak those values for whatever reason, I am unlikely to be pleased.
+This is fine and dandy as long as you only care about the ratio of a voltage divider, but as soon as the check for what that does for the regulator's output voltage is needed? Ugh, fine! What about the extremes of the tolerances on those resistors? Fine, it can be done once - but if someone goes to tweak those values for whatever reason, the author is unlikely to be pleased.
 
-So, let's get atopile to do it for us!
+Therefore, let atopile do it!
 
-atopile will automatically solve systems of constraints for you with free variables, and check that the values of attributes are within their tolerances.
+atopile automatically solves systems of constraints for you with free variables, and checks that the values of attributes are within their tolerances.
 
 ## Specialization
 
@@ -150,7 +146,7 @@ The `->` operator will specialize a module from it's existing instance, to an in
 some_instance -> AnotherModuleType
 ```
 
-This is useful for configuring a previously specified topology.
+This is useful for configuring a topology specified earlier.
 
 ## Imports
 
@@ -162,10 +158,10 @@ Notes on that statement:
 - add quotes on the "where.ato" - it's a string
 - `What`, `Why` and `Wow` are capitalized because they are in the source file. It has to match precisely - it's a type and types should be capitalized, though this isn't enforced and you can import things other than types from other files
 
-The import statements are with respect to the current project (the root of which is where your `ato.yaml` is placed), or within the standard library (`.ato/modules/`)
+The import statements are relative to the current project (the root of which is where your `ato.yaml` is), or within the standard library (`.ato/modules/`)
 
 <Warning>
-    You'll likely see import statements in the form of `import XYZ from "abc.ato"`. This is a legacy syntax and will be removed in the future. Please use the new syntax.
+    You'll likely see import statements in the form of `import XYZ from "abc.ato"`. This is a legacy syntax and will be removed in the future. Use the new syntax.
 
     It also doesn't support importing multiple things on the same line.
 </Warning>
