--- a/atopile/guides/faebryk.mdx
+++ b/atopile/guides/faebryk.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'faebryk'
-description: faebryk is atopile's kernel. It's how we model the world.
+description: faebryk is atopile's kernel. It's the way the world is modeled.
 icon: 'heart'
 ---
 
 # `faebryk` & `fabll` 🐍
 
-`faebryk` is atopile's core. It's how we model the world.
+`faebryk` is atopile's core. It's the way the world is modeled.
 
 `faebryk` is a Python module that uses a powerful and efficient core graph (nodes + edges) to represent every relationship in your design or circuit.
 
@@ -20,7 +20,7 @@ icon: 'heart'
 
 To build a `fabll` module with atopile, you just need to point to the module within your `ato.yaml` configuration file.
 
-When you run `ato build`, atopile will automatically build the `fabll` module and link it to your project.
+When you run `ato build`, atopile automatically builds the `fabll` module and link it to your project.
 
 ## Importing `fabll` code
 
