--- a/atopile/guides/git.mdx
+++ b/atopile/guides/git.mdx
@@ -4,9 +4,9 @@ description: 'Using `git` for Hardware'
 icon: 'git-alt'
 ---
 
-`git` is a powerful way to version control your design and one of the key reason we started atopile. If you don't know about `git`, we strongly recommend learning it. There is a high chance you will end up loving it.
+`git` is a powerful way to version control your design and one of the key reasons atopile was started. If you don't know about `git`, learning it is strongly recommended. It's highly likely you end up loving it.
 
-## Basic Usage
+## Basic usage
 
 ```sh
 git clone <repo-url>
@@ -16,7 +16,7 @@ git commit -m "This commits adds an LED indicator..."
 git push -u origin HEAD
 ```
 
-## Workflow Overview
+## Workflow overview
 
 `git` is the de-facto standard for version control in software development. For people who haven't used it before, it's worth explaining a few terms and the workflow
 
