--- a/atopile/guides/install.mdx
+++ b/atopile/guides/install.mdx
@@ -9,7 +9,7 @@ import QuickstartInstall from '/snippets/atopile/guides/quick-install.mdx';
 <QuickstartInstall />
 
 
-Ultimately `atopile` is a python package, so you can install it where and however you want - but some python package managers are better than others. Here's how we recommend you install atopile.
+Ultimately `atopile` is a python package, so you can install it where and but you want - but some python package managers are better than others. Here's the recommended method to install atopile.
 
 
 ## Homebrew `brew` <small>(recommended for macOS)</small>
@@ -35,7 +35,7 @@ brew install atopile/tap/atopile
         Do it.
     </Warning>
 
-3. Check `ato` is installed
+3. Check `ato` installed
 
     ``` sh
     ato --version
