--- a/atopile/essentials/6-saving-your-work.mdx
+++ b/atopile/essentials/6-saving-your-work.mdx
@@ -6,7 +6,7 @@ icon: 'github'
 
 atopile strongly recommends using `git` for version control.
 
-If you're not yet familiar with `git`, check out our short [`git` guide](../guides/git.md) for a general overview on the workflow.
+If you're not yet familiar with `git`, check out the short [`git` guide](../guides/git.md) for a general overview on the workflow.
 
 ## Committing
 
@@ -33,9 +33,9 @@ If you're not yet familiar with `git`, check out our short [`git` guide](../guid
     Cmd+Click on Mac, Ctrl+Click on Windows to open the link in your browser.
 </Note>
 
-## Up on Github
+## Up on GitHub
 
-There are a few paths to contribute back to a repository.
+A few paths exist to contribute back to a repository.
 
 If you have permissions to push directly to the repo, by far the easiest way to update it is to contribute directly.
 
@@ -52,23 +52,23 @@ If you're right at the start of your project, you might want to push straight to
 They'll be up on `main`
 
 
-### Create a Branch and Pull Request
+### Create a branch and pull request
 
 For a more controlled development process, especially as your project grows, it's best practice to work on feature branches and create pull requests. Here are some recommendations:
 
 - Use descriptive branch names, like `feature/add-bluetooth-support` or `bugfix/fix-routing-error`.
-- Keep your commits focused and well-documented. Write clear commit messages that explain the "why" behind a change, not just the "what".
+- Keep your commits focused and well-documented. Write clear commit messages that explain the "why" behind a change, not just the "what."
 - When you open a pull request, include a detailed description of the change, the rationale behind it, and steps for testing.
-- If your repository is configured with [`Continuous Integration`](#continuous-integration), ensure that all tests pass before merging your PR.
+- If your repository is set up with [`Continuous Integration`](#continuous-integration), ensure that all tests pass before merging your PR.
 - Request code reviews from your team. Peer reviews help catch potential issues early and improve code quality.
 
 ### Continuous Integration (CI)
 
-atopile's project template include basic CI workflows to validate your design, build manufacturing data you can order with and run testing.
+atopile's project template include basic CI workflows to check your design, build manufacturing data you can order with and run testing.
 
-It builds in CI as a `frozen` project, meaning it'll try its hardest to rebuild your design exactly as it stands, with the exact same parts and layout. When it can't - whether because your source code has changes and the components no longer satisfy the design, or because the layout is out of date - it'll fail the build.
+It builds in CI as a `frozen` project, meaning it tries its hardest to rebuild your design exactly as it stands, with the exact same parts and layout. When it can't - whether because your source code has changes and the components no longer meet the design, or because the layout is out of date - it fails the build.
 
-Additionally, CI is run to build all targets, which means it will also produce the gerber files to order your PCBs.
+Additionally, CI runs to build all targets, which means it also produces the gerber files to order your PCBs.
 
 <Tip>
     Consistent use of pull requests and CI pipelines not only improves code quality but also fosters better team collaboration. Keep your `main` branch in a deployable state by merging only after successful CI runs.
