Add styles back to version control and fix spelling

--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -65,11 +65,11 @@ To reuse a layout from a module:
 
 Use KiCad to place-and-route the rest of your design, just like if you got it from the schematic editor.
 
-If you can't find the quality of KiCad docs you need to get started, drop a comment or upvote on this Github Issue !882
+If you can't find the quality of KiCad docs you need to get started, drop a comment or upvote on this GitHub Issue !882
 
 
 ## Auto-layout :rocket: ?881
 
 atopile can do small bits of auto-layout for you, but it's not fully exposed to `ato` yet.
 
-If this is a feature that'd super-charge your workflow, please come vote and discuss it in the Github Discussion ?881
+If this is a feature that'd super-charge your workflow, please come vote and discuss it in the GitHub Discussion ?881
