--- a/atopile/quickstart.mdx
+++ b/atopile/quickstart.mdx
@@ -43,7 +43,7 @@ Otherwise, you can download it from here: https://www.kicad.org/download/
 ## A typical workflow
 
 1. Sketch your circuit on paper.
-2. Search https://packages.atopile.io and Github for pre-existing modules you need, and use `ato install` to install them.
+2. Search https://packages.atopile.io and GitHub for pre-existing modules you need, and use `ato install` to install them.
 3. Design a module and do it's calculations using `ato` code.
 4. Run `ato build` to compile your project choose components to suit your design and update your layout (PCB) file.
 5. Use KiCAD to layout any changes
