--- a/hil/atopilled.mdx
+++ b/hil/atopilled.mdx
@@ -87,7 +87,7 @@ For teams which repeatably build very similar products, there's often a lot of v
 
 A process for automated software and firmware on every commit / change made, typically before it's even merged into the main branch.
 
-When you think of CI, picture the green tick ✅ (or red cross ❌) on a Github PR.
+When you think of CI, picture the green tick ✅ (or red cross ❌) on a GitHub PR.
 
 Typically started during the early engineering phases of the project, but continued through the rest of the project's life, with fidelity varying. Considered critical infrastructure for every modern software team.
 
@@ -103,7 +103,7 @@ When you think of HiL testing, picture a server rack with each shelf hosting a b
 Typically, HiL testing:
 
 - is done with a system that's shared between many engineers
-- is orchestrated via Github and a test runner, like `pytest`
+- is orchestrated via GitHub and a test runner, like `pytest`
 - stores results for verification and auditing
 - provides broad coverage, routinely running hundreds of tests for every commit
 - must be very reliable and fast, since it's run so frequently and its results should be used to gate features merging
@@ -120,7 +120,7 @@ You might also hear the term "buck" thrown around here often in the automotive i
 
 #### System
 
-After the integration phase, this is when a whole system is complete and tested together as a unit. This is typically pretty high-fidelity testing, though sometimes elements are mocked out for cost, safety or to save time during testing (eg. cells in a battery pack).
+After the integration phase, this is when a whole system is complete and tested together as a unit. This is typically pretty high-fidelity testing, though sometimes elements are mocked out for cost, safety or to save time during testing (cells in a battery pack).
 
 When you think of system testing, picture a fully assembled product, but instrumented up with additional equipment to exercise it.
 
