--- a/hil/resources/os.mdx
+++ b/hil/resources/os.mdx
@@ -7,7 +7,7 @@ description: Configuring the OS
 
 TODO: Add reference information on exactly what Raspberry Pi OS version is used and what configuration is used.
 
-### Installing `usbboot` on OSx
+### Installing `usbboot` on macOS
 
 We've had issues with the official instructions at https://github.com/raspberrypi/usbboot
 
@@ -17,7 +17,7 @@ Alternative instructions worked for @napowderly: https://www.jeffgeerling.com/bl
 
 Docs: https://github.com/raspberrypi/firmware/blob/master/boot/overlays/README
 
-Configs are applied in config.txt:
+Configurations are applied in config.txt:
 
 `sudo nano /boot/firmware/config.txt`
 
