--- a/atopile/essentials/6-saving-your-work.mdx
+++ b/atopile/essentials/6-saving-your-work.mdx
@@ -25,10 +25,10 @@ If you're not yet familiar with `git`, check out the short [`git` guide](../guid
 
 4. Commit your changes: `git commit -m "Add the RP2040 module"`. Commit messages should describe the changes you've made and why.
 
-5. Push your changes up to Github: `git push`
+5. Push your changes up to GitHub: `git push`
 
 <Note>
-    If you're on a branch other than `main`, the response from Github gives you a link to the pull request.
+    If you're on a branch other than `main`, the response from GitHub gives you a link to the pull request.
 
     Cmd+Click on Mac, Ctrl+Click on Windows to open the link in your browser.
 </Note>
@@ -47,7 +47,7 @@ As your project progresses and stabilizes, you typically want to create a new br
 If you're right at the start of your project, you might want to push straight to `main`. This is fast and dirty. All you need to do is:
 
 1. Commit your changes: `git commit -m "Add the RP2040 module"`
-2. Push your changes up to Github: `git push`
+2. Push your changes up to GitHub: `git push`
 
 They'll be up on `main`
 
