--- a/hil/introduction.mdx
+++ b/hil/introduction.mdx
@@ -6,7 +6,7 @@ icon: rocket
 
 Testing hardware is essential, whether for design validation, system integration, or factory QA. The right tools accelerate development and ensure reliability, while the wrong ones cause delays and erode confidence.
 
-Using this framework you ([or we](https://form.typeform.com/to/DLMYKqCu)) can build custom test equipment tailored precisely to your needs, typically vastly faster and at a radically lower cost than equivalent commercial solutions. Born from our experiences building the tools we wished we had, we aim to streamline your testing processes, from benchtop bring-up to automated CI and end-of-line validation.
+Using this framework you ([or we](https://form.typeform.com/to/DLMYKqCu)) can build custom test equipment tailored precisely to your needs, typically vastly faster and at a radically lower cost than equivalent commercial solutions. Born from our experiences building the tools we wished we had, we aim to streamline your testing processes, from bench-top bring-up to automated CI and end-of-line validation.
 
 <CardGroup cols={2}>
     <Card title="Hardware" icon="cubes" href="./build/hardware">
