Fix final vale issues

--- a/atopile/essentials/1-the-ato-language.mdx
+++ b/atopile/essentials/1-the-ato-language.mdx
@@ -97,7 +97,7 @@ These are hopefully sufficiently intuitive to not warrant further explanation ðŸ
 
 With Units and Tolerances together, physical attributes can be defined.
 
-There are several legal ways to combine them.
+Several legal ways exist to combine them.
 
 - `3V to 3.6V` perhaps for a supply rail
 - `3V +/- 10mV` maybe for a reference
@@ -109,7 +109,7 @@ There are several legal ways to combine them.
 
 :sparkles: **Maths** :sparkles:
 
-There are two things that atopile does for you with these values:
+atopile does two things for you with these values:
 1. Check that assertions about their relationships to one another are true
 2. Solve systems of constraints based on these relationships to find component values
 
