Add publishing docs

--- a/atopile/essentials/4-packages.mdx
+++ b/atopile/essentials/4-packages.mdx
@@ -102,9 +102,4 @@ The search path for `from ... import ...` is (in order):
 3. The `.ato/modules` directory within the project's root
 
 
-## Sharing packages you've built
-
-To the package manager: coming soon. :rocket: ?495
-
-For now, publish a public repo with a README.md that describes the package and how to use it.
-Sharing on Discord is also welcome.
+Check out [the publishing guide](/guides/publish) for more information on how to publish your own packages!
